--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,4 @@
 [DEFAULT]
-access_key_id = AKIAISR2IOIVBMTKISPQ
-secret_access_key = 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
-region_name = ap-southeast-1
-source_s3_bucket_name =
-new_s3_bucket_name =
+access_key_id =
+secret_access_key =
+region_name =
